--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,84 @@
 {
+    "— лицензированное агентство недвижимости" : "— licensed real estate agency",
+    "Мы помогаем клиентам купить, продать, арендовать или сдать в аренду коммерческие и жилые объекты" : "We help clients buy, sell, rent or lease commercial and residential properties",
+    "С качественной отделкой" : "With quality finishing",
+    "Рассрочка 0%" : "Installment plan 0%",
+    "Первый взнос от 30%" : "Down payment from 30%",
+    "Подходит для жизни и" : "Suitable for life and",
+    "инвестиций" : "investment",
+    "Под ключ" : "Full construction",
+    "Работаем" : "We work",
+    "без комиссии" : "without commission",
+    "по ценам застройщиков" : "at developer prices",
+    "Лучшие объекты" : "Best objects",
+    "Получить каталог, если нет времени на поиски" : "Get a catalog if you don’t have time to search",
+    "Вы получите" : "You'll get",
+    "Проекты от" : "Projects from",
+    "надежных застройщиков" : "reliable developers",
+    "Цены и сроки сдачи" : "Prices and delivery dates",
+    "жилищных комплексов" : "for housing complexes",
+    "Площади и планировки" : "Areas and layouts",
+    "Инфраструктура и месторасположение" : "Infrastructure and location",
+    "Получить каталог" : "Get catalog",
+    "Остались вопросы?" : "Still have questions?",
+    "Оставьте заявку и мы Вам перезвоним" : "Leave a request and we will call you back",
+    "Инвестиции в недвижимость Турции: получение гражданства для россиян" : "Investments in real estate in Turkey: obtaining citizenship for Russians",
+    "Получение гражданства Турции для россиян через инвестиции в недвижимость. Как вложиться в апартаменты, чтобы получить паспорт и минимум налогов?" : "Obtaining Turkish citizenship for Russians through real estate investments. How to invest in an apartment to get a passport and minimum taxes?",
+    "За последние пять лет мы стали свидетелями настоящего бума на рынке турецкой недвижимости, и немалую роль в этом играет привлечение иностранного капитала. Инвестируют в сельское хозяйство, промышленность, туризм, но самым востребованным направлением инвестирования была и остается сфера недвижимости." : "Over the past five years, we have witnessed a real boom in the Turkish real estate market, and attracting foreign capital plays a significant role in this. They invest in agriculture, industry, tourism, but the most popular area of investment has been and remains the real estate sector.",
+    "Благодаря удачному расположению на стыке торговых путей страна имеет огромный потенциал роста: по мнению экспертов, уже в ближайшее время Турецкая республика войдет в десятку государств с наиболее высокими темпами экономического развития. Востребованность турецкой недвижимости для инвесторов (и в том числе для россиян) обусловлена стабильным развитием экономики, а также следующими факторами:" : "Thanks to its favorable location at the junction of trade routes, the country has enormous growth potential: according to experts, in the near future the Republic of Turkey will become one of the ten countries with the highest rates of economic development. The demand for Turkish real estate for investors (including Russians) is due to the stable development of the economy, as well as the following factors:",
+    "Почему иностранцы выбирают инвестиции в недвижимость в Турции?" : "Why do foreigners choose to invest in real estate in Turkey?",
+    "Удобные условия инвестирования" : "Convenient investment conditions",
+    "Правительство Турецкой республики использует достаточно либеральные способы регулирования иностранных инвестиций, что делает привлекательным вложение капитала в турецкую экономику. Например, инвесторы могут быть освобождены от налога на недвижимость в Турции и не платят налог на добавленную стоимость при приобретении жилья." : "The government of the Turkish Republic uses fairly liberal methods of regulating foreign investment, which makes investing capital in the Turkish economy attractive. For example, investors may be exempt from property taxes in Turkey and do not pay value added tax when purchasing a home.",
+    "Гибкие инвестиционные схемы" : "Flexible investment schemes",
+    "Кроме этого, в стране сфера недвижимости отлично поддается прогнозированию: инвестора не ждут «сюрпризы», потому что на турецкую недвижимость не оказывают влияния никакие внешние факторы. Инвестировали в апартаменты в Турции, расположенные в хорошем районе и с достойным качеством строительства, — будьте уверены в том, что они окажутся столь же ликвидными и через пять, и через десять лет" : "In addition, the country’s real estate industry is highly predictable: investors are not in for “surprises” because Turkish real estate is not influenced by any external factors. Invested in apartments in Turkey, located in a good area and with decent quality of construction - rest assured that they will be just as liquid in five or ten years",
+    "Наиболее востребованным является инвестирование в жилую недвижимость, которое может представлять собой:" : "The most popular is investing in residential real estate, which can be:",
+    "Инвестиции в апартаменты в Турции для долгосрочной аренды и получения пассивного дохода;" : "Investments in apartments in Turkey for long-term rental and passive income;",
+    "Приобретение апартаментов в жилых комплексах Турции для сдачи на короткий срок;" : "Purchasing apartments in residential complexes in Turkey for short-term rental;",
+    "Покупка жилой недвижимости на этапе «котлована» для последующей перепродажи." : "Purchase of residential real estate at the “pit” stage for subsequent resale.",
+    "Также в Турецкой республике есть варианты инвестирования в коммерческую недвижимость: офисные здания, торговые площади, складские помещения, производственные и промышленные зоны." : "Also in the Republic of Turkey there are options for investing in commercial real estate: office buildings, retail space, warehouses, production and industrial zones.",
+    "Вариативность предложений" : "Variability of offers",
+    "Если еще десять-пятнадцать лет назад строилось не так много новых объектов, то сейчас в стране есть предложения любых типов недвижимости — вплоть до ультрасовременных пятизвездочных ЖК. Объем рынка жилья гарантирует обилие вариантов, причем в любом регионе страны." : "If ten to fifteen years ago not many new properties were built, now the country has offers of all types of real estate - up to ultra-modern five-star residential complexes. The size of the housing market guarantees an abundance of options, in any region of the country.",
+    "Доступность" : "Availability",
+    "«Точка входа» в инвестирование в жилые объекты Турции не так высока, особенно если сравнивать с другими странами. Минимальный ценник на апартаменты, готовые к заселению, составляет около 100 000$; объекты премиум-класса можно приобрести за 500 000$. И, кстати, последние предоставляют покупателю возможность получения гражданства Турции за инвестиции." : "The “entry point” for investing in residential properties in Turkey is not so high, especially when compared with other countries. The minimum price tag for ready-to-move-in apartments is about $100,000; Premium class properties can be purchased for $500,000. And, by the way, the latter provide the buyer with the opportunity to obtain Turkish citizenship for investment.",
+    "Как получить гражданство Турции за инвестиции?" : "How to obtain Turkish citizenship by investment?",
+    "Право оформить вид на жительство дается иностранному инвестору при покупке жилья стоимостью не менее 200 000$, а если поднять планку до 400 000$ — можно претендовать сразу на получение статуса гражданина. Продавать объект, за который было получено гражданство, нельзя в течение трех лет; процесс натурализации занимает около полугода, после чего новый статус присваивается не только покупателю, но и членам его семьи, причем все, кто получили паспорт Турции за инвестиции, не обязаны проживать в стране, как требуется в случае с видом на жительство." : "The right to obtain a residence permit is given to a foreign investor when purchasing housing worth at least $200,000, and if you raise the bar to $400,000, you can immediately apply for citizenship status. It is impossible to sell the object for which citizenship was obtained for three years; The naturalization process takes about six months, after which the new status is assigned not only to the buyer, but also to his family members, and everyone who received a Turkish passport for investment is not required to reside in the country, as is required in the case of a residence permit.",
+    "Грамотно подобранный объект недвижимости может стать источником стабильной прибыли — например, доход от аренды апартаментов может достигать 10% годовых. Чтобы подобрать наиболее эффективную инвестиционную схему в пределах вашего бюджета, обратитесь к сотрудникам агентства Oneteam, и мы обозначим пул вариантов с максимальным уровнем доходности." : "A properly selected property can become a source of stable profit - for example, income from apartment rentals can reach 10% per annum. To choose the most effective investment scheme within your budget, contact Oneteam agency staff, and we will identify a pool of options with the maximum level of profitability.",
+    "Гражданство Турции за инвестиции в недвижимость. ВНЖ за покупку квартир" : "Turkish citizenship for real estate investment. Residence permit for the purchase of apartments",
+    "Советы от Oneteam, которые помогут получить ВНЖ и гражданство в Турции. Узнайте все о натурализации через инвестиции в недвижимость и покупку квартир." : "Tips from Oneteam that will help you obtain a residence permit and citizenship in Turkey. Learn all about naturalization through real estate investment and apartment purchases.",
+    "Турция является одной из самых популярных для переезда стран, и вызвано это простотой процедуры получения вида на жительство, а впоследствии — и гражданства. О том, как получить турецкий паспорт за покупку недвижимости, расскажет наш сотрудник Марина Новикова, которая вот уже 6 лет помогает россиянам натурализоваться в стране через приобретение жилых (и коммерческих) объектов." : "Turkey is one of the most popular countries for moving, and this is due to the simplicity of the procedure for obtaining a residence permit, and subsequently citizenship. Our employee Marina Novikova, who has been helping Russians naturalize in the country through the purchase of residential (and commercial) properties for 6 years, will tell you how to get a Turkish passport for purchasing real estate.",
+    "Вид на жительство в Турецкой республике называется «икамет» и имеет следующие особенности:" : "A residence permit in the Republic of Turkey is called “ikamet” and has the following features:",
+    "Предоставляет право проживать в стране самому покупателю недвижимости, а также членам его семьи;" : "Grants the right to reside in the country to the real estate buyer himself, as well as to members of his family;",
+    "Оформлять ВНЖ в Турции можно сразу после завершения сделки, и весь процесс занимает около трех-четырех месяцев;" : "You can apply for a residence permit in Turkey immediately after the transaction is completed, and the whole process takes about three to four months;",
+    "Получить икамет за покупку недвижимости можно не во всех районах: выдача ВНЖ приостановлена в локациях, где иностранцев более 25% от общего объема;" : "It is not possible to receive ikamet for purchasing real estate in all areas: the issuance of residence permits is suspended in locations where foreigners account for more than 25% of the total;",
+    "ВНЖ в Турецкой республике дается только за покупку недвижимости на определенную сумму, которая зависит от выбранного покупателем города. К примеру, в небольшом населенном пункте стоимость подходящих для получения икамет объектов составляет минимум 50 000$, в более крупных же может доходить до 75 000%." : "A residence permit in the Republic of Turkey is given only for the purchase of real estate for a certain amount, which depends on the city chosen by the buyer. For example, in a small locality the cost of objects suitable for obtaining ikamet is at least $50,000, but in larger ones it can reach up to 75,000%.",
+    "Как получить ВНЖ за покупку недвижимости?" : "How to get a residence permit for purchasing real estate?",
+    "Приобрести квартиру в Турции или дом для собственного проживания;" : "Buy an apartment in Turkey or a house for your own residence;",
+    "Купить недвижимость в Турции для осуществления коммерческой деятельности." : "Buy real estate in Turkey for commercial activities.",
+    "Какие документы нужны для получения турецкого ВНЖ?" : "What documents are needed to obtain a Turkish residence permit?",
+    "Заявление: заполняется на портале Миграционной службы;" : "Application: filled out on the Migration Service portal;",
+    "Загранпаспорт покупателя: оригинал и заверенная нотариусом (обязательно турецким!) копия;" : "Buyer's international passport: original and a copy certified by a notary (necessarily Turkish!);",
+    "Справка о доходах: выписка из банка, которая свидетельствует о наличии у иностранца средств для проживания в Турецкой республике;" : "Certificate of income: bank statement, which indicates that the foreigner has the means to live in the Republic of Turkey;",
+    "Справка об отсутствии судимости: оригинал и копия с переводом, заверенная турецким нотариусом;" : "Certificate of no criminal record: original and copy with translation, certified by a Turkish notary;",
+    "TAPU — документ о праве собственности: оригинал и копия (без заверения);" : "TAPU - document of ownership: original and copy (without certification);",
+    "Отчет экспертизы: составляется независимым экспертом и подтверждает стоимость приобретенного объекта;" : "Examination report: compiled by an independent expert and confirms the cost of the purchased object;",
+    "Чек об уплате госпошлины: ее размер зависит от страны прибытия и срока оформления ВНЖ;" : "Receipt for payment of state duty: its size depends on the country of arrival and the period for obtaining a residence permit;",
+    "Sigorta — страховой медицинский полис: выдается местными страховыми организациями;" : "Sigorta - medical insurance policy: issued by local insurance organizations;",
+    "Фотографии: 4 цветных, размером 3,5*4,5 см." : "Photos: 4 color, size 3.5*4.5 cm.",
+    "Как получить гражданство при покупке недвижимости?" : "How to obtain citizenship when buying real estate?",
+    "Обычно здесь не обходится без предварительного получения икамет — вида на жительство, и натурализоваться можно после пяти лет официального проживания в республике на основании ВНЖ. Но есть и другой вариант, и подходит он инвесторам, готовым вложиться в покупку объектов недвижимости оценочной стоимостью от 400 000$ и более. На указанную сумму можно приобрести:" : "Usually, this is not possible without first obtaining an ikamet - a residence permit, and you can become naturalized after five years of official residence in the republic on the basis of a residence permit. But there is another option, and it is suitable for investors who are ready to invest in the purchase of real estate with an estimated value of $400,000 or more. For the specified amount you can purchase:",
+    "Дома или квартиры на первичном рынке либо в старом фонде;" : "Houses or apartments on the primary market or in an old building;",
+    "Коммерческую недвижимость (офисы, склады, магазины, в том числе и на разных стадиях строительства);" : "Commercial real estate (offices, warehouses, shops, including those at various stages of construction);",
+    "Земельные участки площадью до 30 Га, предназначенные для коммерческой либо жилой застройки." : "Land plots with an area of up to 30 hectares, intended for commercial or residential development.",
+    "Для получения гражданства Турции за недвижимость потребуются следующие документы:" : "To obtain Turkish citizenship for real estate, the following documents will be required:",
+    "Договор купли-продажи;" : "Contract of sale;",
+    "TAPU — свидетельство о праве собственности;" : "TAPU - certificate of ownership;",
+    "Разрешение на строительство либо план развития, если покупатель инвестирует в земельные участки;" : "A building permit or development plan if the buyer is investing in land;",
+    "Справка об исполнении финансовых обязательств от Турецкого кадастрового управления;" : "Certificate of fulfillment of financial obligations from the Turkish Cadastral Authority;",
+    "Оплата госпошлины." : "Payment of state duty.",
+    "Также потребуются личные документы покупателя и членов его семьи (фотографии, заявления, паспорта, свидетельства о рождении и о заключении брака, справка о составе семьи, свидетельства о несудимости)." : "You will also need personal documents of the buyer and his family members (photos, statements, passports, birth and marriage certificates, family composition certificates, police clearance certificates).",
+    "Система получения гражданства и ВНЖ в Турции за инвестиции при покупке недвижимости может показаться достаточно сложной, но никаких трудностей не возникнет, если вы воспользуетесь помощью специалистов агентства Oneteam. Наша поддержка не заканчивается после оформления сделки купли-продажи: мы останемся рядом с вами и после того, как вы станете обладателем турецкой недвижимости, и поможем вам получить ВНЖ или гражданство в Турецкой Республике — быстро, легко и с гарантированным результатом." : "The system of obtaining citizenship and residence permit in Turkey by investment when purchasing real estate may seem quite complicated, but no difficulties will arise if you use the help of Oneteam agency specialists. Our support does not end after the purchase and sale transaction is completed: we will remain by your side even after you become the owner of Turkish real estate, and will help you obtain a residence permit or citizenship in the Republic of Turkey - quickly, easily and with a guaranteed result.",
+
+
     "Oneteam подготовит для вас пул доступных вариантов, предоставит переводчика и юриста, и обеспечит бережное сопровождение на каждом этапе сделки.": "Oneteam will prepare a pool of available options for you, provide a translator and lawyer, and provide careful support at every stage of the transaction.",
     "Австралия": "Australia",
     "Азия": "Oneteam will prepare a pool of available options for you, provide a translator and lawyer, and provide careful support at every stage of the transaction.",
@@ -14,6 +94,7 @@
     "В портфеле Oneteam представлены высоколиквидные объекты, предназначенные для разных целей: для инвестиций, сдачи в аренду и просто для комфортной жизни. Все они поступают к нам напрямую от застройщиков, минуя посредников, и это значит, что мы можем предложить вам лучшие цены на них.": "Oneteam's portfolio includes highly liquid properties intended for different purposes: for investment, rental, and simply for a comfortable life. All of them come to us directly from developers, bypassing intermediaries, and this means that we can offer you the best prices for them.",
     "ВНЖ в подарок": "Gift of Residence Permit",
     "ВНЖ и Гражданство": "Residence Permit and Citizenship",
+    "ВНЖ и гражданство": "Residence Permit and citizenship",
     "Валюта": "Currency",
     "Ванна": "Bath",
     "Ванные": "Bathrooms",
@@ -98,6 +179,7 @@
     "Объявлений": "Advertisement",
     "Объявлений не найдено": "Ads not found",
     "Объявления": "Advertisements",
+    "объявления": "ads",
     "Озеро": "Lake",
     "Ознакомлен с": "Familiarized with",
     "Ознакомлен с политикой конфиденциальности": "I have read the privacy policy",
